# mcp-test

./: README.md  jenkins-new-file.txt  jenkins-test.txt  main.tf  variables.tf
jenkins_mcp_server/: Dockerfile  README.md  __init__.py  http_server.py  pyproject.toml  requirements.txt  server.py
