[project]
name = "jenkins-mcp-server"
version = "1.0.0"
description = "Jenkins MCP Server for Model Context Protocol"
requires-python = ">= 3.10"

dependencies = [
    "httpx>=0.27.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
