[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jenkins-mcp-server"
version = "0.1.0"
description = "MCP server for Jenkins CI/CD operations"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx"
]

[project.scripts]
jenkins-mcp-server = "jenkins_mcp_server.server:main"
